# uinput-device

./: README.md  local.properties  settings.gradle
app/: build.gradle  persist.sys.keystore
app/src/androidTest/java/com/action/androidq/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  tool_lib.cpp  tool_lib.h
app/src/main/java/com/action/androidq/: Execl_Java.kt  MainActivity.kt  MyAccplication.kt  MyApplication.kt  NativeAction.kt  Person.kt  PortFiles.java  Ports.kt  SecondActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/action/androidq/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
